Prevent horizontal overflow on html and body

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -77,3 +77,6 @@
   background-image: url('/images/Earth_background1.png');
 }
 
+html, body {
+  overflow-x: hidden;
+}
